--- a/web/templates/vue.html
+++ b/web/templates/vue.html
@@ -11,6 +11,7 @@
                     underline text-blue-600
                     hover:text-zinc-700 
                     visited:text-zinc-400">
+                    <p> blockies is a vue component, </p>
                     <a href="https://github.com/afa7789/BlockiesVue"></a>
                     check the component code here
                     </a>
