--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -209,7 +209,7 @@
                 </a>
             </div>
             <div class="relative pt-6 mb-20">
-                <a href="/links" class="absolute left-0 mukta_font text-2xl hover:text-zinc-200 hover:text-3xl">
+                <a href="/link" class="absolute left-0 mukta_font text-2xl hover:text-zinc-200 hover:text-3xl">
                     OTHER LINKS
                 </a>
             </div>
