--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -149,6 +149,17 @@
                     </p>
 
                 </div>
+                <!-- consultoria -->
+                <div>
+                    <p class="service-num">2</p>
+                    <h3 class="text-lg sm:text-xl md:text-2xl ">
+                        Consultancy
+                    </h3>
+                    <p style="min-width: 180px; max-width: 330px;" class="italic">
+                        Definition of the tech stack, project scope, project canvas,
+                        the SRS documentation, and MVP features.
+                    </p>
+                </div>
                 <!-- web3 -->
                 <div>
                     <p class="service-num">3</p>
@@ -160,17 +171,7 @@
                         Connect your platform to the EVM or other blockchain smartcontract system.
                     </p>
                 </div>
-                <!-- consultoria -->
-                <div>
-                    <p class="service-num">4</p>
-                    <h3 class="text-lg sm:text-xl md:text-2xl ">
-                        Consultancy
-                    </h3>
-                    <p style="min-width: 180px; max-width: 330px;" class="italic">
-                        Definition of the tech stack, project scope, project canvas,
-                        the SRS documentation, and MVP features.
-                    </p>
-                </div>
+
             </div>
             <div class="relative pt-6 mb-20">
                 <a href="#contact"
@@ -195,14 +196,15 @@
                 </p>
             </div>
             <div class="ml-4">
-                <a class="my-5 flex d-block space-x-3 hover:text-zinc-200 " href="https://github.com/afa7789" target="_blank">
+                <a class="my-5 flex d-block space-x-3 hover:text-zinc-200 " href="https://github.com/afa7789"
+                    target="_blank">
                     <img class="w-10" type="image/svg+xml" src="/public/images/drawing.svg" alt="site logo">
                     <h3 class="text-lg mt-1 sm:text-xl md:text-2xl align-middle">Check out Arthur's profile at</h3>
                     <img class="w-20" type="image/svg+xml" src="/public/images/github_mark.svg" alt="site logo">
                 </a>
 
-                <a class="flex d-block space-x-3 cursor-pointer  hover:text-zinc-200 " href="https://www.linkedin.com/in/arthur-abeilice/"
-                    target="_blank">
+                <a class="flex d-block space-x-3 cursor-pointer  hover:text-zinc-200 "
+                    href="https://www.linkedin.com/in/arthur-abeilice/" target="_blank">
                     <h3 class="text-lg mt-1 sm:text-xl md:text-2xl align-middle ">Connect with Arthur at his page in
                     </h3>
                     <img class="w-28" type="image/svg+xml" src="/public/images/linkedin_logo.svg" alt="site logo">
