--- a/web/templates/components/footer.html
+++ b/web/templates/components/footer.html
@@ -15,7 +15,7 @@
     </div>
     <div
         class="before:content-[''] before:mb-4 before:block before:border-solid before:border-b-2 before:border-black  mx-auto my-4">
-        <p class="pl-2 sm:pl-0">
+        <p class="text-sm sm:text-base pl-2 sm:pl-0">
             afa7789 Computer Engineering Solutions Ltda @ 2021
         </p>
         <div class="flex">
