--- a/web/templates/blog.html
+++ b/web/templates/blog.html
@@ -41,7 +41,7 @@
         <div class="flex flex-col">
             {{range $i, $id := .PostsID}}
             <hr class="horizontal_line_class" />
-            <a class="mt-2 block flex items-center" href="/blog/{{$id}}-{{index $slugs $i}}">
+            <a class="my-2 block flex items-center" href="/blog/{{$id}}-{{index $slugs $i}}">
                 <img class="w-32 h-32 float-left mr-2" src="{{ index $images $i }}">
                 <div class="flex flex-col">
                     <p class="mb-1 text-lg mukta_font">{{index $titles $i}}</p>
