adding the footer to it

--- a/web/templates/blog.html
+++ b/web/templates/blog.html
@@ -53,6 +53,8 @@
         </div>
         {{end}}
     </section>
+    <!-- FOOTER -->
+    {{ template "components/min_footer.html" . }}
 </body>
 
 </html>
