changes on meta for post updating the blog system

--- a/web/templates/post.html
+++ b/web/templates/post.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-{{ template "components/meta.html" . }}
+{{ template "components/meta_post.html" . }}
 
 <body class="px-0 py-0 mx-0 my-0">
     <!-- HEADER -->
