--- a/web/templates/components/meta_post.html
+++ b/web/templates/components/meta_post.html
@@ -10,8 +10,15 @@
     <meta name="description" content="{{.PostSynopsis}}">
     <meta name="author" content="Arthur F. Abeilice">
     <meta name="keywords" content="Web3, development, computer engineering, blockchain, software engineer">
-    <meta property="og:image" content="{{ .PostImage }}" />
-    <link rel="apple-touch-icon" href="{{ .PostImage }}" />
+    <meta property="og:image" content="https://afa7789.com/{{ .PostImage }}" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="https://afa7789.com" />
+    <meta name="twitter:title" content="{{ .Title }}" />
+    <meta name="twitter:description" content="{{.PostSynopsis}}">
+    <meta name="twitter:image" content="https://afa7789.com/{{ .PostImage }}" />
+
+    <link rel="apple-touch-icon" href="https://afa7789.com{{ .PostImage }}" />
     <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@800&family=Orelega+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/segment7" type="text/css"/>
     <title> {{ .Title }} </title>
