--- a/web/templates/post.html
+++ b/web/templates/post.html
@@ -41,7 +41,7 @@
                 color: #404040;
             }
             #content a{
-                color: lightskyblue;
+                color: rgb(57, 104, 133);
             }
             #content a:hover{
                 color: aqua;
