--- a/web/templates/post.html
+++ b/web/templates/post.html
@@ -53,6 +53,8 @@
                 background-color: #272727;
                 display:block;
                 padding:20px;
+                font-size: 0.6rem; 
+                margin-top: 5px;
             }
         </style>
         <div id="content">
