--- a/web/templates/post.html
+++ b/web/templates/post.html
@@ -52,9 +52,10 @@
                 border-radius: 10px;
                 background-color: #272727;
                 display:block;
-                padding:20px;
-                font-size: 0.6rem; 
+                padding:15px;
+                font-size: 0.8rem; 
                 margin-top: 5px;
+                margin-bottom: 5px;
             }
         </style>
         <div id="content">
