--- a/web/templates/post.html
+++ b/web/templates/post.html
@@ -45,6 +45,11 @@
                 font-size: 0.9rem; 
                 color: #404040;
             }
+            #content li{
+                font-size: 0.9rem; 
+                color: #404040;
+                margin: 2px 5px;
+            }
             #content a{
                 color: rgb(57, 104, 133);
             }
