html update on code

--- a/web/templates/post.html
+++ b/web/templates/post.html
@@ -7,7 +7,7 @@
     {{ template "components/header.html" . }}
     <section class="my-10 px-12" id="post">
         <a href="/blog">
-            <button class="absolute right-10 mukta_font text-2xl hover:text-zinc-100 hover:text-3xl">
+            <button class="mukta_font text-xl hover:text-zinc-100 hover:text-2xl">
                MORE POSTS ON BLOG
             </button>
         </a>
