--- a/web/templates/components/meta_post.html
+++ b/web/templates/components/meta_post.html
@@ -11,9 +11,10 @@
     <meta name="author" content="Arthur F. Abeilice">
     <meta name="keywords" content="Web3, development, computer engineering, blockchain, software engineer">
     <meta property="og:image" content="https://afa7789.com{{ .PostImage }}" />
-
+    <meta property="og:url" content="https://afa7789.com/blog/{{ .PostId }}" />
+    <meta property="og:type" content="website" /> 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="https://afa7789.com" />
+    <meta name="twitter:site" content="https://afa7789.com/blog/{{ .PostId }}" />
     <meta name="twitter:title" content="{{ .Title }}" />
     <meta name="twitter:description" content="{{.PostSynopsis}}">
     <meta name="twitter:image" content="https://afa7789.com{{ .PostImage }}" />
