--- a/web/templates/components/meta.html
+++ b/web/templates/components/meta.html
@@ -11,6 +11,7 @@
     <meta name="author" content="Arthur F. Abeilice">
     <meta name="keywords" content="Web3, development, computer engineering, blockchain, software engineer">
     <meta property="og:image" content="https://afa7789.com/public/image/banner3.png" />
+    <meta property="og:url" content="https://afa7789.com/" />
     <link rel="apple-touch-icon" href="https://afa7789.com/public/image/banner3.png" />
     <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@800&family=Orelega+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/segment7" type="text/css"/>
