more meta changes

--- a/web/templates/components/meta.html
+++ b/web/templates/components/meta.html
@@ -8,6 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="afa7789 tech blog about development and web3.">
+    <meta name="og:description" content="afa7789 tech blog about development and web3.">
+    <meta name="og:title" content="{{ .Title }}">
     <meta name="author" content="Arthur F. Abeilice">
     <meta name="keywords" content="Web3, development, computer engineering, blockchain, software engineer">
     <meta property="og:image" content="https://afa7789.com/public/images/banner3.png" />
