mmmm something is not quite right but this works. ( probably backend realted) not a major bug just a matter of wrong var name

--- a/web/templates/components/meta_post.html
+++ b/web/templates/components/meta_post.html
@@ -11,10 +11,10 @@
     <meta name="author" content="Arthur F. Abeilice">
     <meta name="keywords" content="Web3, development, computer engineering, blockchain, software engineer">
     <meta property="og:image" content="https://afa7789.com{{ .PostImage }}" />
-    <meta property="og:url" content="https://afa7789.com/blog/{{ .PostID }}-{{ .PostSlug }}" />
+    <meta property="og:url" content="https://afa7789.com/blog/{{ .PostID }}" />
     <meta property="og:type" content="website" /> 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="https://afa7789.com/blog/{{ .PostID }}-{{ .PostSlug }}" />
+    <meta name="twitter:site" content="https://afa7789.com/blog/{{ .PostID }}" />
     <meta name="twitter:title" content="{{ .Title }}" />
     <meta name="twitter:description" content="{{.PostSynopsis}}">
     <meta name="twitter:image" content="https://afa7789.com{{ .PostImage }}" />
