--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -59,7 +59,7 @@
                     <div class="overflow-hidden">
                         <img class="w-96 sm:w-5/6 object-cover h-60 sm:h-80" src="{{index $postimages $i}}"
                             alt="{{ $title }} image">
-                        <div class=" sm:px-6 sm:py-4">
+                        <div class=" sm:pr-6 sm:py-4">
                             <div class="font-bold text-xl mb-2">{{ $title }}</div>
                             <p class="text-gray-200 text-base">{{index $synp $i}}</p>
                         </div>
