--- a/web/templates/index_blog.html
+++ b/web/templates/index_blog.html
@@ -15,7 +15,7 @@
                 <h5 class="aldo_font -mb-3 ml-3"> afa7789 </h5>
 
                 <h1 class="text-4xl md:text-6xl mukta_font"> 
-                    Computer Wizzard Tech Blog
+                    Computer Crypto Techno Wizzard Blog
                 </h1>
 
                 <h2 class="text-lg sm:text-xl md:text-2xl text-right"> an Arthur's website </h2>
