add ajax for delete part 1

--- a/web/templates/messages.html
+++ b/web/templates/messages.html
@@ -17,9 +17,13 @@
         <div class="flex flex-col">
             {{range $i, $id := .MessageIds}}
             <hr class="horizontal_line_class" />
-            <a href="/message/delete/{{$id}}" target="_blank">
+            <a id="id-delete-{{$id}}">
                 ❌
             </a>
+            <script>
+                const els = Array.from(document.querySelectorAll('[id*=id-delete-]'));
+                els.forEach(el => el.onclick = () => console.log('Clicked el:', el));
+            </script>
             <div class="flex flex-col">
                 <p class="mb-1 text-lg mukta_font"> {{index $names $i}} </p>
                 <p class="mb-1 text-xl mukta_font"> {{index $subject $i}} </p>
