--- a/web/templates/messages.html
+++ b/web/templates/messages.html
@@ -14,10 +14,10 @@
         {{ $subject := .MessageSubjects }}
         {{ $names := .MessageNames }}
         {{ $emails := .MessageEmails }}
-        <div class="flex flex-col">
+        <div class="flex flex-col" style="position:relative">
             {{range $i, $id := .MessageIds}}
             <hr class="horizontal_line_class" />
-            <a id="id-delete-{{$id}}">
+            <a style="position:absolute; right:10px; float:right" id="id-delete-{{$id}}">
                 ❌
             </a>
             <div class="flex flex-col">
