--- a/web/templates/messages.html
+++ b/web/templates/messages.html
@@ -35,7 +35,7 @@
                     XHR.addEventListener('load', function (event) {
                         let resp = JSON.parse(event.target.response);
                         console.log("at load",resp)
-                        alert('Yeah! Data sent and response loaded.'+resd);
+                        alert('Yeah! Data sent and response loaded.'+resp);
                     });
 
                     // Define what happens in case of error
