--- a/web/templates/post.html
+++ b/web/templates/post.html
@@ -86,9 +86,10 @@
             {{ $titles := .RPostsTitles }}
             {{ $slugs := .RPostsSlugs }}
 
+            <h3 class="text-lg text-zinc-700">Related Posts</h2>
             {{range $i, $id := .RPostsID}}
                 <div style="display:flex;" class="px-12" >
-                    <p>⚫</p>
+                    <p>⬤</p>
                     <a href="/blog/{{$id}}-{{index $slugs $i}}">
                         <p class="text-lg ">{{index $titles  $i}}</p>
                         <p>{{index $synp  $i}}</p>
