--- a/web/templates/post.html
+++ b/web/templates/post.html
@@ -86,7 +86,7 @@
             {{ $titles := .RPostsTitles }}
             {{ $slugs := .RPostsSlugs }}
 
-            <h3 class="text-lg text-zinc-700">Related Posts</h2>
+            <h3 class="text-lg text-zinc-700 px-12">Related Posts</h2>
             {{range $i, $id := .RPostsID}}
                 <div style="display:flex;" class="px-12" >
                     <p>⬤</p>
