--- a/web/templates/index_blog.html
+++ b/web/templates/index_blog.html
@@ -118,11 +118,17 @@
 
         <!-- SERVICES -->
         <section class="my-2 px-12 mt-10 pt-2">
-            <h2 class="text-xl sm:text-2xl md:text-4xl  mukta_font mb-4">Things I like to do</h2>
+            <h2 class="text-xl sm:text-2xl md:text-4xl  mukta_font mb-4">Code Related</h2>
             <!-- <p class="italic mt-2 sm:pl-2  sm:ml-8">
                 Want to hire some working hours? maybe we can fit in the spare hours, or reserve future hours for your
                 project.
             </p> -->
+            <p> Right now I'm working at Tally, a Web3 company that creates the Best FrontEnd to interact with DAOs: </p>
+            <a href="https://www.tally.xyz/" >
+                <img class="w-10" type="image/svg+xml" src="/public/images/Tally_Logo_Color.svg" alt="tally logo">
+            </a>
+            
+            <img>
             <style>
                 .service-num {
                     font-size: 264px;
@@ -181,9 +187,15 @@
 
             </div>
             <div class="relative pt-6 mb-20">
-                <a href="#contact"
+                <!-- <a href="#contact"
                     class="absolute right-10 text-black mukta_font text-2xl hover:text-zinc-700 hover:text-3xl">
                     CONTACT ME
+                </a> -->
+                <a class="my-5 flex d-block space-x-3 hover:text-zinc-200 " href="https://github.com/afa7789"
+                target="_blank">
+                    <img class="w-10" type="image/svg+xml" src="/public/images/drawing.svg" alt="site logo">
+                    <h3 class="text-lg mt-1 sm:text-xl md:text-2xl align-middle">Check out my git profile at </h3>
+                    <img class="w-20" type="image/svg+xml" src="/public/images/github_mark.svg" alt="site logo">
                 </a>
             </div>
 
@@ -202,13 +214,12 @@
                 </p>
             </div>
             <div class="ml-4">
-                <a class="my-5 flex d-block space-x-3 hover:text-zinc-200 " href="https://github.com/afa7789"
-                    target="_blank">
+                <!-- <a class="my-5 flex d-block space-x-3 hover:text-zinc-200 " href="https://github.com/afa7789"
+                target="_blank">
                     <img class="w-10" type="image/svg+xml" src="/public/images/drawing.svg" alt="site logo">
                     <h3 class="text-lg mt-1 sm:text-xl md:text-2xl align-middle">Check out my git profile at </h3>
                     <img class="w-20" type="image/svg+xml" src="/public/images/github_mark.svg" alt="site logo">
-                </a>
-
+                </a> -->
                 <a class="flex d-block space-x-3 cursor-pointer  hover:text-zinc-200 "
                     href="https://www.linkedin.com/in/arthur-abeilice/" target="_blank">
                     <h3 class="text-lg mt-1 sm:text-xl md:text-2xl align-middle ">Connect with me at my page in
